# neural-network

./: ActivateFunction.cpp  ActivateFunction.h  CMakeLists.txt  Config.txt  Matrix.cpp  Matrix.h  NetWork.cpp  NetWork.h  NetWorkForVideoOne.sln  NetWorkForVideoOne.vcxproj  NetWorkForVideoOne.vcxproj.filters  README.md  Weights.txt  data_characters_test.txt  nn  source.cpp  unittests.cpp
